...
    onQueryChange: (TextFieldValue) -> Unit = {},
    placeholder: String = "Search songs, artists or people"
) {
  Row(
      verticalAlignment = Alignment.CenterVertically,
      modifier =
          Modifier.testTag("shortSearchBarRow")
              .fillMaxWidth()
              .height(60.dp)
              .drawWithCache {
                onDrawWithContent {
                  drawContent()
                  drawLine(
...
              focusedTextColor = MaterialTheme.colorScheme.primary,
              focusedBorderColor = Color.Transparent,
              unfocusedBorderColor = Color.Transparent,
              cursorColor = MaterialTheme.colorScheme.primaryContainer),
      shape = RoundedCornerShape(5.dp),
      modifier =
          Modifier.testTag("writableSearchBar")
              .focusRequester(focusRequester)
              .padding(top = 4.dp, bottom = 4.dp, start = 8.dp, end = 8.dp)
              .shadow(elevation = 4.dp, spotColor = LightGray, ambientColor = LightGray)
              .fillMaxSize()
              .background(
                  color = MaterialTheme.colorScheme.surfaceContainer,
...
