...
      title = { BeatLinkTopLogo() },
      navigationIcon = {
        CornerIcons(
            onClick = navigationAction,
            icon = Icons.AutoMirrored.Filled.ArrowBack,
            contentDescription = "Go back",
            modifier = Modifier.testTag("goBackButton"),
            iconSize = 30.dp)
      })
}

@Composable
fun BeatLinkTopLogo() {
...
